# hexagonal-polls

./: README.md  exceptions.py  pyproject.toml  requirements.txt  setup.py  use_cases.py
misc/: patterns.py
src/hexagonal_polls/: dtos.py  exceptions.py  interfaces.py  use_cases.py
src/hexagonal_polls/misc/: __init__.py  adapters.py  helper_interfaces.py  patterns.py
