# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexagonal-polls" 

version = "1.5.1"
description = "Core domain contracts for the Hexagonal Polls application."
readme = "README.md"
authors = [
    {name = "siht", email = "yo@yo.yo"}
]
license = {file = "LICENSE"}
keywords = ["hexagonal", "architecture", "domain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "Twisted~=25.5.0",
]

[tool.hatch.build]
# Esto instruye a Hatchling a construir el paquete usando el diseño 'src'
directory = "src"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/hexagonal_polls"]

[tool.pytest.ini_options]
# Esto le dice a pytest que añada la carpeta 'src' al PYTHONPATH
# para que Python pueda encontrar 'hexagonal_polls'
pythonpath = ["src"]